# agentic_ai_apps

./: README.md
blog_writer/: pyproject.toml
blog_writer/blog_writer/: README.md  pyproject.toml  report.md
blog_writer/blog_writer/src/blog_writer/: crew.py  main.py
blog_writer/blog_writer/src/blog_writer/config/: agents.yaml  tasks.yaml
digital_marketer/: README.md  hello.py  pyproject.toml
digital_marketer/social_media_marketing/: README.md  optimized_content.md  pyproject.toml
digital_marketer/social_media_marketing/src/social_media_marketing/: crew.py  main.py
digital_marketer/social_media_marketing/src/social_media_marketing/config/: agents.yaml  tasks.yaml
function-calling/: functional_calling.ipynb
langgraph-digital-marketer/: README.md  assistant_selector.py  digital_market.py  hello.py  pyproject.toml
