[project]
name = "social_media_marketing"
version = "0.1.0"
description = "social-media-marketing using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
social_media_marketing = "social_media_marketing.main:run"
run_crew = "social_media_marketing.main:run"
train = "social_media_marketing.main:train"
replay = "social_media_marketing.main:replay"
test = "social_media_marketing.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
